[gd_scene load_steps=13 format=3 uid="uid://i7bflbb5kv57"]

[ext_resource type="Script" path="res://addons/dianodes/scripts/DialogueEditor.gd" id="1_bqdsv"]
[ext_resource type="Texture2D" uid="uid://dl2kn66hcvc10" path="res://addons/dianodes/icons/play.svg" id="1_v4xmj"]
[ext_resource type="Script" path="res://addons/dianodes/scripts/DialogueGraph.gd" id="2_yci5l"]
[ext_resource type="Script" path="res://addons/dianodes/scripts/DialogueFiles.gd" id="3_wogok"]
[ext_resource type="Script" path="res://addons/dianodes/scripts/data/Dialogue.gd" id="4_8sxjj"]
[ext_resource type="Texture2D" uid="uid://cn5cahumlnmrm" path="res://addons/dianodes/icons/npc.svg" id="4_ovqwt"]
[ext_resource type="Script" path="res://addons/dianodes/scripts/data/LineNodeData.gd" id="5_3lmmf"]
[ext_resource type="Texture2D" uid="uid://bfxb7gk35hqys" path="res://addons/dianodes/icons/event.svg" id="5_jyaj7"]
[ext_resource type="Script" path="res://addons/dianodes/scripts/NodeCreatorPopup.gd" id="6_dc56l"]
[ext_resource type="Texture2D" uid="uid://c5yym0vytchht" path="res://addons/dianodes/icons/condition.svg" id="6_qy6wd"]

[sub_resource type="Resource" id="Resource_f26po"]
script = ExtResource("5_3lmmf")
_character_name = ""
_name = ""
name = ""
guid = ""
position = Vector2(0, 0)
size = Vector2(0, 0)

[sub_resource type="Resource" id="Resource_teces"]
script = ExtResource("4_8sxjj")
nodes = Array[Resource("res://addons/dianodes/scripts/data/BaseNodeData.gd")]([SubResource("Resource_f26po")])
connections = Array[Dictionary]([])

[node name="DialogueEditor" type="Control" node_paths=PackedStringArray("_graph", "_files")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_bqdsv")
_graph = NodePath("VBox/HSplitContainer/DialogueGraph")
_files = NodePath("VBox/HSplitContainer/VSplitContainer/Files")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 0

[node name="NewButton" type="Button" parent="VBox/Menu"]
layout_mode = 2
disabled = true
text = "New"

[node name="LoadButton" type="Button" parent="VBox/Menu"]
layout_mode = 2
disabled = true
text = "Load"

[node name="SaveButton" type="Button" parent="VBox/Menu"]
layout_mode = 2
disabled = true
text = "Save"

[node name="RunButton" type="Button" parent="VBox/Menu"]
layout_mode = 2
text = "Run"
icon = ExtResource("1_v4xmj")

[node name="Padding" type="Control" parent="VBox/Menu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Padding2" type="Control" parent="VBox/Menu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShowPortraitsButton" type="CheckButton" parent="VBox/Menu"]
layout_mode = 2
button_pressed = true
text = "Show Portraits"

[node name="HSplitContainer" type="HSplitContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0
split_offset = 200

[node name="VSplitContainer" type="VSplitContainer" parent="VBox/HSplitContainer"]
layout_mode = 2

[node name="Files" type="ItemList" parent="VBox/HSplitContainer/VSplitContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_wogok")

[node name="DialogueGraph" type="GraphEdit" parent="VBox/HSplitContainer"]
layout_mode = 2
right_disconnects = true
script = ExtResource("2_yci5l")
data = SubResource("Resource_teces")

[node name="NodeCreatorPopup" type="PopupMenu" parent="VBox/HSplitContainer/DialogueGraph"]
size = Vector2i(185, 92)
item_count = 3
item_0/text = "Line"
item_0/icon = ExtResource("4_ovqwt")
item_0/id = 0
item_1/text = "Condition"
item_1/icon = ExtResource("6_qy6wd")
item_1/id = 3
item_2/text = "Event"
item_2/icon = ExtResource("5_jyaj7")
item_2/id = 2
script = ExtResource("6_dc56l")

[node name="DialoguePreview" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60
